--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<html> Hello World! </html>
+<html>
+<head>
+  <title>hz</title>
+  <link rel="icon" href="data:," />
+</head>
+<body>
+ Hello World! 
+</body>
+</html>
