--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
+<!DOCTYPE html>
 <html>
 <head>
-  <title>hz</title>
+  <meta charset="UTF-8" />
+  <title>~ hz</title>
   <link rel="icon" href="data:," />
 </head>
 <body>
- Hello World! 
+ Hello world! 
 </body>
 </html>
