--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>~ hz</title>
   <link rel="icon" href="data:," />
+  <link rel="stylesheet" href="index.css" />
 </head>
 <body>
  Hello world! 
